--- a/Piskorky/Piskorky/Piskorky.csproj
+++ b/Piskorky/Piskorky/Piskorky.csproj
@@ -46,11 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="DataLayer.cs" />
+    <Compile Include="FrmGame.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmGame.Designer.cs">
+      <DependentUpon>FrmGame.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmAddNewGame.cs">
       <SubType>Form</SubType>
@@ -58,11 +59,12 @@
     <Compile Include="FrmAddNewGame.Designer.cs">
       <DependentUpon>FrmAddNewGame.cs</DependentUpon>
     </Compile>
-    <Compile Include="PlayingArea.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Step.cs" />
+    <EmbeddedResource Include="FrmGame.resx">
+      <DependentUpon>FrmGame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAddNewGame.resx">
       <DependentUpon>FrmAddNewGame.cs</DependentUpon>
